Codepen demo (https://codepen.io/MittenedWatchmaker/pen/NLgxvz ) doesnt render anything with gpu-canvas
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | --- | disabled |
| firefox110 | --- | verified |
| firefox111 | --- | verified |
People
(Reporter: mayankleoboy1, Assigned: lsalzman)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
Enable gpu-canvas
Go to https://codepen.io/MittenedWatchmaker/pen/NLgxvz
ER: animation
AR: Nothing.
2022-12-12T22:45:10.398000: DEBUG : Found commit message:
Bug 1801548 - Ignore round cap-style for sufficiently thin lines. r=jrmuizel
Differential Revision: https://phabricator.services.mozilla.com/D162498
2022-12-12T22:45:10.398000: DEBUG : Did not find a branch, checking all integration branches
2022-12-12T22:45:10.398000: INFO : The bisection is done.
2022-12-12T22:45:10.430000: INFO : Stopped
| Reporter | ||
Comment 1•3 years ago
|
||
| Reporter | ||
Comment 2•3 years ago
|
||
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Comment 3•3 years ago
|
||
Apparently, even though nothing is drawn on the screen, the page continues to use cpu/gpu : https://share.firefox.dev/3HpErW1
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
Avoid causing a divide-by-zero when a stroked line is zero-length and only the cap is rendered.
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Comment 5•3 years ago
|
||
Set release status flags based on info from the regressing bug 1801548
Comment 7•3 years ago
|
||
| bugherder | ||
Comment 8•3 years ago
|
||
The patch landed in nightly and beta is affected.
:lsalzman, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox109towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Managed to reproduce on a 2022-12-12 Nightly build on macOS 12.
Verified as fixed on Firefox 110.0b5(build ID: 20230124185837) and Nightly 111.0a1(build ID: 20230126094703) on macOS 12, Windows 10, Ubuntu 22.
Description
•