Bug 1805231 - Handle zero-length capped lines. r=aosmond

Avoid causing a divide-by-zero when a stroked line is zero-length and only the cap is rendered.

Differential Revision: https://phabricator.services.mozilla.com/D164536