dom/canvas/DrawTargetWebgl.cpp
@@ -3198,8 +3198,8 @@ bool DrawTargetWebgl::StrokeLineAccel(const Point& aStart, const Point& aEnd,
                                       const DrawOptions& aOptions) {
   // Approximating a wide line as a rectangle works only with certain cap styles
   // in the general case (butt or square). However, if the line width is
-  // sufficiently thin, we can ignore the round cap without causing
-  // objectionable artifacts.
+  // sufficiently thin, we can either ignore the round cap (or treat it like
+  // square for zero-length lines) without causing objectionable artifacts.
   if (mWebglValid && SupportsPattern(aPattern) &&
       (aStrokeOptions.mLineCap == CapStyle::BUTT ||
        aStrokeOptions.mLineCap == CapStyle::SQUARE ||
@@ -3213,11 +3213,34 @@ bool DrawTargetWebgl::StrokeLineAccel(const Point& aStart, const Point& aEnd,
     // as rounded rectangles are currently not supported for round line caps.
     Point start = aStart;
     Point dirX = aEnd - aStart;
-    float scale = aStrokeOptions.mLineWidth / dirX.Length();
-    Point dirY = Point(-dirX.y, dirX.x) * scale;
-    if (aStrokeOptions.mLineCap == CapStyle::SQUARE) {
-      start -= (dirX * scale) * 0.5f;
-      dirX += dirX * scale;
+    Point dirY;
+    float dirLen = dirX.Length();
+    float scale = aStrokeOptions.mLineWidth;
+    if (dirLen == 0.0f) {
+      // If the line is zero-length, then only a cap is rendered.
+      switch (aStrokeOptions.mLineCap) {
+        case CapStyle::BUTT:
+          // The cap doesn't extend beyond the line so nothing is drawn.
+          return true;
+        case CapStyle::ROUND:
+        case CapStyle::SQUARE:
+          // Draw a unit square centered at the single point.
+          dirX = Point(scale, 0.0f);
+          dirY = Point(0.0f, scale);
+          // Offset the start by half a unit.
+          start.x -= 0.5f * scale;
+          break;
+      }
+    } else {
+      // Make the scale map to a single unit length.
+      scale /= dirLen;
+      dirY = Point(-dirX.y, dirX.x) * scale;
+      if (aStrokeOptions.mLineCap == CapStyle::SQUARE) {
+        // Offset the start by half a unit.
+        start -= (dirX * scale) * 0.5f;
+        // Ensure the extent also accounts for the start and end cap.
+        dirX += dirX * scale;
+      }
     }
     Matrix lineXform(dirX.x, dirX.y, dirY.x, dirY.y, start.x - 0.5f * dirY.x,
                      start.y - 0.5f * dirY.y);
